force-app/main/default/objects/Training_Question__c/Training_Question__c.object-meta.xml
<CustomObject>
    <label>Training Question</label>
    <pluralLabel>Training Questions</pluralLabel>
    <description>The question bank behind the mock exam, held in the org so the blueprint weights and the bank can be reviewed by the same pull request that changes them.</description>
</CustomObject>