force-app/main/default/objects/Training_Question__c/fields/CorrectOption__c.field-meta.xml
<CustomField>
    <fullName>CorrectOption__c</fullName>
    <label>CorrectOption  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>A</fullName><label>A</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>B</fullName><label>B</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>C</fullName><label>C</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>D</fullName><label>D</label></value></valueSetDefinition>
    </valueSet>
</CustomField>