force-app/main/default/objects/Training_Question__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>Easy</fullName><label>Easy</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Medium</fullName><label>Medium</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Hard</fullName><label>Hard</label></value></valueSetDefinition>
    </valueSet>
</CustomField>