force-app/main/default/objects/Training_Question__c/fields/OptionA__c.field-meta.xml
<CustomField>
    <fullName>OptionA__c</fullName>
    <label>Option A</label>
    <type>Text</type>
    <length>255</length>
</CustomField>