force-app/main/default/objects/Training_Question__c/fields/OptionB__c.field-meta.xml
<CustomField>
    <fullName>OptionB__c</fullName>
    <label>Option B</label>
    <type>Text</type>
    <length>255</length>
</CustomField>