force-app/main/default/objects/Training_Question__c/fields/OptionC__c.field-meta.xml
<CustomField>
    <fullName>OptionC__c</fullName>
    <label>Option C</label>
    <type>Text</type>
    <length>255</length>
</CustomField>