force-app/main/default/objects/Training_Question__c/fields/OptionD__c.field-meta.xml
<CustomField>
    <fullName>OptionD__c</fullName>
    <label>Option D</label>
    <type>Text</type>
    <length>255</length>
</CustomField>