force-app/main/default/objects/Training_Question__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <label>Question Text</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <required>true</required>
</CustomField>