force-app/main/default/objects/Training_Question__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>